change HttpURLConnection for java.net.http.HttpClient