@@ -12,11 +12,13 @@ import ru.clevertec.cleverbank.service.NbRBCurrencyService;
 import ru.clevertec.cleverbank.service.impl.NbRBCurrencyServiceImpl;
 import ru.clevertec.cleverbank.util.YamlUtil;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.time.Duration;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.Executors;
@@ -62,15 +64,17 @@ public class NbRBCurrencyListener implements ServletContextListener {
 
     private void getCurrencyFromNbRB(String apiUrl, Integer code) {
         try {
-            URL url = new URL(apiUrl + code);
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("GET");
-            connection.setConnectTimeout(5000);
-            connection.setReadTimeout(5000);
-            int responseCode = connection.getResponseCode();
+            HttpClient client = HttpClient.newHttpClient();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(apiUrl + code))
+                    .timeout(Duration.ofSeconds(5))
+                    .GET()
+                    .build();
+            HttpResponse<String> httpResponse = client.send(request, HttpResponse.BodyHandlers.ofString());
+            int responseCode = httpResponse.statusCode();
             if (responseCode == HttpURLConnection.HTTP_OK) {
-                String result = readResponseFromNbRB(connection);
-                NbRBCurrencyResponse response = gson.fromJson(result, NbRBCurrencyResponse.class);
+                String body = httpResponse.body();
+                NbRBCurrencyResponse response = gson.fromJson(body, NbRBCurrencyResponse.class);
                 lock.lock();
                 NbRBCurrency saved = nbRBCurrencyService.save(response);
                 lock.unlock();
@@ -78,21 +82,10 @@ public class NbRBCurrencyListener implements ServletContextListener {
             } else {
                 log.error("GET request failed: {}", responseCode);
             }
-            connection.disconnect();
-        } catch (IOException e) {
+        } catch (IOException | InterruptedException e) {
             log.error(e.getMessage());
+            Thread.currentThread().interrupt();
         }
-    }
-
-    private String readResponseFromNbRB(HttpURLConnection connection) throws IOException {
-        StringBuilder result = new StringBuilder();
-        try (BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
-            String line;
-            while ((line = reader.readLine()) != null) {
-                result.append(line);
-            }
-        }
-        return result.toString();
     }
 
     /**
